--- a/info-test.properties
+++ b/info-test.properties
@@ -12,3 +12,5 @@ mybatis.typeAliasesPackage=com.jt.cart.pojo
 mybatis.mapperLocations=classpath:mapper/*.xml
 mybatis.configuration.mapUnderscoreToCamelCase=true
 mybatis.configuration.cacheEnabled=false
+name=zx
+age=18
